@@ -4,3 +4,4 @@
 3,,"Groupe Privés",,,,,,,,,,,,,,,,
 4,,"Groupe Province",,,,,,,,,,,,,,,,
 5,,"Équipe de Direction",,,,,,,,,,,,,,,,
+6,,"Mon organisation",,,,,,,,,,,,,,,,
