@@ -57,6 +57,10 @@
            name="Products.PloneMeeting.vocabularies.itemtemplatesstorableasannexvocabulary" />
   <utility component=".vocabularies.SelectableHeldPositionsVocabularyFactory"
            name="Products.PloneMeeting.vocabularies.selectableheldpositionsvocabulary" />
+  <utility component=".vocabularies.SelectableAssemblyMembersVocabularyFactory"
+           name="Products.PloneMeeting.vocabularies.selectableassemblymembersvocabulary" />
+  <utility component=".vocabularies.SelectableItemInitiatorsVocabularyFactory"
+           name="Products.PloneMeeting.vocabularies.selectableiteminitiatorsvocabulary" />
   <utility component=".vocabularies.ItemNotPresentTypeVocabularyFactory"
            name="Products.PloneMeeting.vocabularies.not_present_type_vocabulary" />
 
